--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,8 +7,9 @@
     <item
         android:id="@+id/search_button"
         android:title="@string/search_title"
+
         android:icon="@drawable/ic_search_but"
         android:orderInCategory="1"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="always" />
 </menu>
