--- a/app/src/main/res/layout/news_main_list.xml
+++ b/app/src/main/res/layout/news_main_list.xml
@@ -5,14 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="8dp"
-        android:orientation="vertical"
-        android:nestedScrollingEnabled="true"/>
+    <include layout="@layout/list"/>
 
     <!-- Empty view is only visible when the list has no items. -->
     <TextView
