--- a/app/src/main/res/layout/tool_bar_2.xml
+++ b/app/src/main/res/layout/tool_bar_2.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="50dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:theme="@style/toolBarTheme"
-    app:layout_scrollFlags="scroll|enterAlways"/>
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:id="@+id/toolbar"
+android:layout_width="match_parent"
+android:layout_height="48dp"
+android:theme="@style/toolBarTheme"
+app:layout_scrollFlags="scroll|enterAlways" >
 
-    <ProgressBar
-        android:id="@+id/loading_indicator"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_below="@id/toolbar"/>
-</RelativeLayout>
+        android:layout_height="?attr/actionBarSize"
+        android:divider="?android:dividerVertical"
+        android:dividerPadding="8dp"
+        android:gravity="right"
+        android:orientation="horizontal"
+        android:showDividers="beginning|middle">
+
+        <ProgressBar
+            android:id="@+id/loading_indicator"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:visibility="visible" />
+    </RelativeLayout>/>
+
+</android.support.v7.widget.Toolbar>
