--- a/app/src/main/res/layout/content_reader.xml
+++ b/app/src/main/res/layout/content_reader.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/tool_bar" android:id="@+id/toolbar"/>
 
     <WebView
         android:id="@+id/content_wv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        />
 
-    <include layout="@layout/tool_bar_2" />
+    <ProgressBar
+        android:id="@+id/loading_indicator"
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_gravity="bottom"
+        style="?android:progressBarStyleHorizontal"
+        android:progressDrawable="@drawable/custom_progress_bar"/>
 
 </RelativeLayout>
