Fix the SearchActivity and style the SearchView cursor

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionBarStyle">@style/NewsAppBarStyle</item>
         <item name="android:windowContentOverlay">@null</item>
+
     </style>
 
     <!--Style the text and menu icon of toolbar-->
@@ -16,6 +17,8 @@
         <item name="controlBackground">@color/colorPrimary</item>
         <item name="android:textColorPrimary">#fff</item>
         <item name="android:tint">#FFF</item>
+        <!--Change the SearchView's cursor color-->
+        <item name="android:textCursorDrawable">@drawable/cursor</item>
     </style>
 
     <style name="subTextView">
