Fix the SearchView magnifier error, then fix the content_reader.xml's toolbar Also reformat code for the whole project

--- a/app/src/main/res/drawable/custom_progress_bar.xml
+++ b/app/src/main/res/drawable/custom_progress_bar.xml
@@ -5,12 +5,11 @@
     <item android:id="@android:id/background">
         <shape>
             <gradient
-                android:startColor="@android:color/transparent"
+                android:angle="270"
                 android:centerColor="@android:color/transparent"
                 android:centerY="1.0"
                 android:endColor="@android:color/transparent"
-                android:angle="270"
-                />
+                android:startColor="@android:color/transparent" />
         </shape>
     </item>
 
@@ -19,12 +18,11 @@
         <clip>
             <shape>
                 <gradient
-                    android:startColor="@color/colorAccent"
+                    android:angle="270"
                     android:centerColor="@color/colorPrimary"
                     android:centerY="1.0"
                     android:endColor="@color/colorPrimaryDark"
-                    android:angle="270"
-                    />
+                    android:startColor="@color/colorAccent" />
             </shape>
         </clip>
     </item>
