--- a/app/src/main/res/menu/sidebar_menu.xml
+++ b/app/src/main/res/menu/sidebar_menu.xml
@@ -2,94 +2,98 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--This group contain Editions's labels and its icons-->
-    <group android:id="@+id/edition_group" android:checkableBehavior="single">
+    <group
+        android:id="@+id/edition_group"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/au"
-            android:title="@string/australia_headline"
-            android:icon="@drawable/ic_edition_sidebar"/>
+            android:icon="@drawable/ic_edition_sidebar"
+            android:title="@string/australia_headline" />
         <item
             android:id="@+id/us"
-            android:title="@string/us_headline"
-            android:icon="@drawable/ic_edition_sidebar"/>
+            android:icon="@drawable/ic_edition_sidebar"
+            android:title="@string/us_headline" />
         <item
             android:id="@+id/uk"
-            android:title="@string/uk_headline"
-            android:icon="@drawable/ic_edition_sidebar"/>
+            android:icon="@drawable/ic_edition_sidebar"
+            android:title="@string/uk_headline" />
     </group>
 
     <!--This group contains Sections's labels and its icons-->
-    <group android:id="@+id/section_group" android:checkableBehavior="single">
+    <group
+        android:id="@+id/section_group"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/artanddesign"
-            android:title="@string/art_and_design"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/art_and_design" />
         <item
             android:id="@+id/books"
-            android:title="@string/books"
-            android:icon="@drawable/ic_section_sidebar" />
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/books" />
         <item
             android:id="@+id/business"
-            android:title="@string/business"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/business" />
         <item
             android:id="@+id/culture"
-            android:title="@string/culture"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/culture" />
         <item
             android:id="@+id/education"
-            android:title="@string/education"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/education" />
         <item
             android:id="@+id/environment"
-            android:title="@string/environment"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/environment" />
         <item
             android:id="@+id/fashion"
-            android:title="@string/fashion"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/fashion" />
         <item
             android:id="@+id/film"
-            android:title="@string/film"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/film" />
         <item
             android:id="@+id/football"
-            android:title="@string/football"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/football" />
         <item
             android:id="@+id/jobsadvice"
-            android:title="@string/jobs"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/jobs" />
         <item
             android:id="@+id/lifeandstyle"
-            android:title="@string/life_and_style"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/life_and_style" />
         <item
             android:id="@+id/media"
-            android:title="@string/media"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/media" />
         <item
             android:id="@+id/politics"
-            android:title="@string/politics"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/politics" />
         <item
             android:id="@+id/science"
-            android:title="@string/science"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/science" />
         <item
             android:id="@+id/sport"
-            android:title="@string/sport"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/sport" />
         <item
             android:id="@+id/technology"
-            android:title="@string/technology"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/technology" />
         <item
             android:id="@+id/travel"
-            android:title="@string/travel"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/travel" />
         <item
             android:id="@+id/weather"
-            android:title="@string/weather"
-            android:icon="@drawable/ic_section_sidebar"/>
+            android:icon="@drawable/ic_section_sidebar"
+            android:title="@string/weather" />
     </group>
 </menu>
