--- a/app/src/main/res/layout/sidebar_header.xml
+++ b/app/src/main/res/layout/sidebar_header.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="110dp"
-    android:background="@color/colorPrimary" >
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgView_nav_header"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/ic_guradian_nav_header"/>
+        android:src="@drawable/ic_guradian_nav_header" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,7 +17,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
-        android:textSize="22sp"
+        android:text="The Guardian"
         android:textColor="@android:color/white"
-        android:text="The Guardian"/>
+        android:textSize="22sp" />
 </RelativeLayout>
