Fix the focus of the searchbar in Search_Activity.java In News_MainActivity, make it to collapse every time Change the color of the custom_progress_bar.xml

--- a/app/src/main/res/drawable/custom_progress_bar.xml
+++ b/app/src/main/res/drawable/custom_progress_bar.xml
@@ -9,7 +9,7 @@
                 android:centerColor="@android:color/transparent"
                 android:centerY="1.0"
                 android:endColor="@android:color/transparent"
-                android:startColor="@android:color/transparent" />
+                android:startColor="@color/colorPrimaryDark" />
         </shape>
     </item>
 
@@ -19,10 +19,10 @@
             <shape>
                 <gradient
                     android:angle="270"
-                    android:centerColor="@color/colorPrimary"
+                    android:centerColor="@android:color/white"
                     android:centerY="1.0"
-                    android:endColor="@color/colorPrimaryDark"
-                    android:startColor="@color/colorAccent" />
+                    android:endColor="@android:color/white"
+                    android:startColor="@android:color/white" />
             </shape>
         </clip>
     </item>
