--- a/app/src/main/res/layout/read_content.xml
+++ b/app/src/main/res/layout/read_content.xml
@@ -48,6 +48,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/byline_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
@@ -65,6 +66,7 @@
                     android:padding="8dp" />
 
                 <TextView
+                    android:id="@+id/body_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/trailText_tv"
