--- a/app/src/main/res/layout/news_main_list.xml
+++ b/app/src/main/res/layout/news_main_list.xml
@@ -12,9 +12,11 @@
         android:id="@+id/empty_state_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:textSize="18sp"
         android:layout_centerInParent="true"
         android:textAppearance="?android:textAppearanceMedium"
-        tools:text="No news to display" />
+        tools:text="No internet connection. Tap to retry" />
 
     <!-- Loading indicator is only shown before the first load -->
     <ProgressBar
@@ -23,6 +25,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
