--- a/app/src/main/res/layout/read_content.xml
+++ b/app/src/main/res/layout/read_content.xml
@@ -5,8 +5,8 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:focusableInTouchMode="true">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -28,18 +28,18 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:background="@color/colorAccent"
+                    android:contentDescription="@string/this_is_a_thumbnail"
                     android:scaleType="centerCrop"
-                    tools:src="@drawable/img500"
-                    android:contentDescription="@string/this_is_a_thumbnail" />
+                    tools:src="@drawable/img500" />
 
                 <ProgressBar
                     android:id="@+id/loading_indicator"
                     style="?android:progressBarStyleHorizontal"
-                    android:layout_alignParentTop="true"
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
-                    android:visibility="gone"
-                    android:progressDrawable="@drawable/custom_progress_bar" />
+                    android:layout_alignParentTop="true"
+                    android:progressDrawable="@drawable/custom_progress_bar"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:id="@+id/headline_byline_container"
@@ -101,14 +101,13 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@id/trailText_tv"
-                    >
+                    android:layout_below="@id/trailText_tv">
 
                     <WebView
                         android:id="@+id/content_wv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                 </FrameLayout>
 
